--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,7 @@ jobs:
   build:
     docker:
       - image: debian:stretch
+    working_directory: ~/repo
     steps:
       - checkout
       - setup_remote_docker:
