--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: microsoft/dotnet:latest
+      - image: circleci/node:7.10
     working_directory: ~/repo
     steps:
       - checkout
