updating config.yml

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,11 +16,16 @@ jobs:
             curl -L -o /tmp/docker-$VER.tgz https://get.docker.com/builds/Linux/x86_64/docker-$VER.tgz
             tar -xz -C /tmp -f /tmp/docker-$VER.tgz
             mv /tmp/docker/* /usr/bin    
+       - run:
+          name: Install AWS CLI and jq
+          command: |
+            sudo apt-get -y -qq install awscli
+            sudo apt-get install -y python-pip libyaml-dev python-dev jq
+            sudo pip install awscli
+      
       - run:
-          name: Greeting
+          name: Building Docker Image
           command: |
             docker build -t example .
             docker images
-      - run:
-          name: Print the Current Time
-          command: date
+      
